# csv-inv-order

./: .gitignore  LICENSE  README.md  Raffle_tickets  STEPS  calc_estimates.py  create_POs.py  create_orders.py  est_cost_per_meal.py  inv-order.csv  new_month.py  pyproject.toml  record_purchases.py  rows.py  set_bf_stats.py  set_meeting_attendance.py  set_min_max.py  tables.py
csv_inv_order/: Orders.csv  TODO-DEV  calc_consumed.py  calc_estimates.py  create_POs.py  create_inv_checklist.py  create_orders.py  database.py  est_cost_per_meal.py  inv-order.csv  monthly_stats.py  new_month.py  read_inv.py  recalibrate.py  record_purchases.py  rows.py  set_bf_stats.py  set_meeting_attendance.py  set_min_max.py  tables.py
