# pyproject.toml for csv-inv-order

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
packages = ["csv-inv-order"]

[project]
name = "csv-inv-order"
version = "0.0.1"
readme = "README.md"
requires_python = ">=3.11.2"
dependencies = ["csv-app"]

[project.urls]
repository = "https://github.com/dangyogi/csv_inv_order.git"

[project.scripts]
rows = "rows:run"
tables = "tables:run"
