# pyproject.toml for csv-inv-order

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["csv_inv_order"]

[project]
name = "csv-inv-order"
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11.2"
dependencies = ["csv-app"]

[project.urls]
repository = "https://github.com/dangyogi/csv-inv-order.git"

[project.scripts]
rows = "csv_inv_order.rows:run"
tables = "csv_inv_order.tables:run"
